--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* Import Pixel Design System */
+@import './styles/pixelAnimations.css';
+@import './styles/pixelUtilities.css';
+
 @font-face {
   font-family: 'Press Start 2P';
   src: url('/fonts/press-start-2p.woff2') format('woff2');
